zerocopy-derive/tests/ui-nightly/late_compile_pass.stderr
error[E0277]: the trait bound `NotZerocopy: FromZeroes` is not satisfied
  --> $DIR/late_compile_pass.rs:23:10
   |
23 | #[derive(FromZeroes)]
   |          ^^^^^^^^^^ the trait `FromZeroes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromZeroes`:
             ()
             AU16
             F32<O>
             F64<O>
             FromZeroes1
             I128<O>
             I16<O>
             I32<O>
           and 41 others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `FromZeroes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> $DIR/late_compile_pass.rs:33:10
   |
33 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             FromBytes1
             I128<O>
             I16<O>
             I32<O>
           and 38 others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `FromBytes1: FromZeroes` is not satisfied
   --> $DIR/late_compile_pass.rs:33:10
    |
33  | #[derive(FromBytes)]
    |          ^^^^^^^^^ the trait `FromZeroes` is not implemented for `FromBytes1`
    |
    = help: the following other types implement trait `FromZeroes`:
              ()
              AU16
              F32<O>
              F64<O>
              FromZeroes1
              I128<O>
              I16<O>
              I32<O>
            and 41 others
note: required by a bound in `FromBytes`
   --> /home/ubuntu/projects/zerocopy/src/lib.rs:449:29
    |
449 | pub unsafe trait FromBytes: FromZeroes {
    |                             ^^^^^^^^^^ required by this bound in `FromBytes`
    = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> $DIR/late_compile_pass.rs:44:10
   |
44 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             AsBytes1
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
           and 52 others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> $DIR/late_compile_pass.rs:55:10
   |
55 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and 21 others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> $DIR/late_compile_pass.rs:64:10
   |
64 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and 21 others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> $DIR/late_compile_pass.rs:72:10
   |
72 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and 21 others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
